--- a/css/card4.css
+++ b/css/card4.css
@@ -225,7 +225,7 @@
   text-align: center;
   font-family: var(--font-body);
   font-weight: 500;
-  font-size: 4.5mm;
+  font-size: 4.1mm;
   line-height: 1.4;
   padding: 0 1mm;
 }
@@ -244,7 +244,7 @@
 #card4-section .stack-c2 .c2-details dt {
   font-family: var(--font-body);
   font-style: italic;
-  font-size: 4mm;
+  font-size: 3.7mm;
   font-weight: 500;
   opacity: .85;
   white-space: nowrap;
@@ -254,9 +254,10 @@
 
 #card4-section .stack-c2 .c2-details dd {
   font-family: var(--font-body);
-  font-size: 4mm;
+  font-size: 3.7mm;
   font-weight: 400;
   line-height: 1.15;
+  white-space: nowrap;
 }
 
 /* Card 03 */
@@ -301,7 +302,7 @@
   text-align: center;
   font-family: var(--font-body);
   font-weight: 500;
-  font-size: 4.5mm;
+  font-size: 4.1mm;
   line-height: 1.4;
   padding: 0 1mm;
 }
@@ -320,7 +321,7 @@
 #card4-section .stack-c3 .c3-details dt {
   font-family: var(--font-body);
   font-style: italic;
-  font-size: 4mm;
+  font-size: 3.7mm;
   font-weight: 500;
   opacity: .85;
   white-space: nowrap;
@@ -330,9 +331,10 @@
 
 #card4-section .stack-c3 .c3-details dd {
   font-family: var(--font-body);
-  font-size: 4mm;
+  font-size: 3.7mm;
   font-weight: 400;
   line-height: 1.15;
+  white-space: nowrap;
 }
 
 /* Card 04 arch in stack */
